# computer_assessment

./: pyproject.toml  requirements_dev.txt  setup.cfg  user_accounts.txt
src/: config.yaml  main.py  user_accounts.py
src/applications/: applications.py
src/user_accounts/: user_accounts.py
tests/: test_user_accounts.py
