[metadata]
name = computer_assessment
version = attr: my_package.VERSION
description = Automated script to get computer information from staff pc
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = user_accounts
install_requires =
    importlib-metadata; python_version<"3.8"
package_dir = 
    =src

[options.extras_require]
testing=
    flake8>=4.0
    black>=22.0
    pytest>=7.1
    pytest-cov>=3.0

[flake8]
max-line-length = 160